--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<table border="1" class="dataframe">
+<table border="1" class="dataframe" bgcolor="#FFCC00">
   <thead>
     <tr style="text-align: right;">
       <th></th>
