--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<table border="1" class="dataframe" bgcolor="#e1bcb4">
+<table border="1" class="dataframe" bgcolor="#E1BCB4">
   <thead>
     <tr style="text-align: right;">
       <th></th>
