--- a/index.html
+++ b/index.html
@@ -1,236 +1,3 @@
-<table border="1" class="dataframe" bgcolor="#E1BCB4">
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>Digit-Pairs</th>
-      <th>Distance</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>0</th>
-      <td>(0, 1)</td>
-      <td>14.449608</td>
-    </tr>
-    <tr>
-      <th>1</th>
-      <td>(0, 2)</td>
-      <td>9.334556</td>
-    </tr>
-    <tr>
-      <th>2</th>
-      <td>(0, 3)</td>
-      <td>9.143734</td>
-    </tr>
-    <tr>
-      <th>3</th>
-      <td>(0, 4)</td>
-      <td>10.769844</td>
-    </tr>
-    <tr>
-      <th>4</th>
-      <td>(0, 5)</td>
-      <td>7.519296</td>
-    </tr>
-    <tr>
-      <th>5</th>
-      <td>(0, 6)</td>
-      <td>8.154443</td>
-    </tr>
-    <tr>
-      <th>6</th>
-      <td>(0, 7)</td>
-      <td>11.864555</td>
-    </tr>
-    <tr>
-      <th>7</th>
-      <td>(0, 8)</td>
-      <td>9.907902</td>
-    </tr>
-    <tr>
-      <th>8</th>
-      <td>(0, 9)</td>
-      <td>11.488875</td>
-    </tr>
-    <tr>
-      <th>9</th>
-      <td>(1, 2)</td>
-      <td>10.125323</td>
-    </tr>
-    <tr>
-      <th>10</th>
-      <td>(1, 3)</td>
-      <td>11.733233</td>
-    </tr>
-    <tr>
-      <th>11</th>
-      <td>(1, 4)</td>
-      <td>10.173786</td>
-    </tr>
-    <tr>
-      <th>12</th>
-      <td>(1, 5)</td>
-      <td>11.118800</td>
-    </tr>
-    <tr>
-      <th>13</th>
-      <td>(1, 6)</td>
-      <td>10.614700</td>
-    </tr>
-    <tr>
-      <th>14</th>
-      <td>(1, 7)</td>
-      <td>10.743154</td>
-    </tr>
-    <tr>
-      <th>15</th>
-      <td>(1, 8)</td>
-      <td>10.086777</td>
-    </tr>
-    <tr>
-      <th>16</th>
-      <td>(1, 9)</td>
-      <td>9.932094</td>
-    </tr>
-    <tr>
-      <th>17</th>
-      <td>(2, 3)</td>
-      <td>8.178285</td>
-    </tr>
-    <tr>
-      <th>18</th>
-      <td>(2, 4)</td>
-      <td>7.932541</td>
-    </tr>
-    <tr>
-      <th>19</th>
-      <td>(2, 5)</td>
-      <td>7.906796</td>
-    </tr>
-    <tr>
-      <th>20</th>
-      <td>(2, 6)</td>
-      <td>7.331808</td>
-    </tr>
-    <tr>
-      <th>21</th>
-      <td>(2, 7)</td>
-      <td>8.872531</td>
-    </tr>
-    <tr>
-      <th>22</th>
-      <td>(2, 8)</td>
-      <td>7.077516</td>
-    </tr>
-    <tr>
-      <th>23</th>
-      <td>(2, 9)</td>
-      <td>8.887748</td>
-    </tr>
-    <tr>
-      <th>24</th>
-      <td>(3, 4)</td>
-      <td>9.087608</td>
-    </tr>
-    <tr>
-      <th>25</th>
-      <td>(3, 5)</td>
-      <td>6.118750</td>
-    </tr>
-    <tr>
-      <th>26</th>
-      <td>(3, 6)</td>
-      <td>9.302065</td>
-    </tr>
-    <tr>
-      <th>27</th>
-      <td>(3, 7)</td>
-      <td>8.922401</td>
-    </tr>
-    <tr>
-      <th>28</th>
-      <td>(3, 8)</td>
-      <td>7.020425</td>
-    </tr>
-    <tr>
-      <th>29</th>
-      <td>(3, 9)</td>
-      <td>8.354350</td>
-    </tr>
-    <tr>
-      <th>30</th>
-      <td>(4, 5)</td>
-      <td>8.001517</td>
-    </tr>
-    <tr>
-      <th>31</th>
-      <td>(4, 6)</td>
-      <td>8.782233</td>
-    </tr>
-    <tr>
-      <th>32</th>
-      <td>(4, 7)</td>
-      <td>7.583012</td>
-    </tr>
-    <tr>
-      <th>33</th>
-      <td>(4, 8)</td>
-      <td>7.380909</td>
-    </tr>
-    <tr>
-      <th>34</th>
-      <td>(4, 9)</td>
-      <td>6.010408</td>
-    </tr>
-    <tr>
-      <th>35</th>
-      <td>(5, 6)</td>
-      <td>6.698692</td>
-    </tr>
-    <tr>
-      <th>36</th>
-      <td>(5, 7)</td>
-      <td>9.211954</td>
-    </tr>
-    <tr>
-      <th>37</th>
-      <td>(5, 8)</td>
-      <td>6.967386</td>
-    </tr>
-    <tr>
-      <th>38</th>
-      <td>(5, 9)</td>
-      <td>8.258538</td>
-    </tr>
-    <tr>
-      <th>39</th>
-      <td>(6, 7)</td>
-      <td>10.888237</td>
-    </tr>
-    <tr>
-      <th>40</th>
-      <td>(6, 8)</td>
-      <td>8.587222</td>
-    </tr>
-    <tr>
-      <th>41</th>
-      <td>(6, 9)</td>
-      <td>10.440004</td>
-    </tr>
-    <tr>
-      <th>42</th>
-      <td>(7, 8)</td>
-      <td>8.467785</td>
-    </tr>
-    <tr>
-      <th>43</th>
-      <td>(7, 9)</td>
-      <td>5.426474</td>
-    </tr>
-    <tr>
-      <th>44</th>
-      <td>(8, 9)</td>
-      <td>6.401166</td>
-    </tr>
-  </tbody>
-</table>
+---
+layout: default
+---
